map threashold example, oddly enough results are the same. maybe enum too small, or i dont understand threshold number correctly